# twitter-timeline-top

./: README.md  errors.py  main.py  output.py  ranker.py  requirements.txt  run.py  setup.cfg  timeline_parser.py
data/: tweets.json
loader/: loader.py  local_file_loader.py
tests/: output.py  test_loader.py  test_ranker.py  tweets_fixture.py
top_tweeters/: __init__.py  errors.py  ranker.py
top_tweeters/loader/: loader.py  local_file_loader.py
