[metadata]
name = top-tweeters
version = 1.0.0
description = Getting the top users from a Twitter timeline
long_description = file: README.md
url = https://github.com/flaudanum/twitter-timeline-top
maintainer = Frederic Laudarin
maintainer_email = frederic.laudarin@gmail.com
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pandas
python_requires = >= 3.9.5
zip_safe = False
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    top-tweeters = top_tweeters:main
